--- a/WebApplicationNew/WebApplicationNew.csproj
+++ b/WebApplicationNew/WebApplicationNew.csproj
@@ -334,6 +334,7 @@
     <Content Include="Scripts\sammy-0.7.4.js" />
     <Content Include="Scripts\sammy-0.7.4.min.js" />
     <Content Include="src\item-user.html" />
+    <Content Include="src\login.html" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
