--- a/WebApplicationNew/packages.config
+++ b/WebApplicationNew/packages.config
@@ -8,6 +8,7 @@
   <package id="Autofac.WebApi2" version="4.1.0" targetFramework="net461" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net461" />
@@ -51,5 +52,8 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net461" />
+  <package id="Unity" version="4.0.1" targetFramework="net461" />
+  <package id="Unity.Mvc4" version="1.6.0.0" targetFramework="net461" />
+  <package id="Unity.WebAPI" version="5.2.3" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
