--- a/WebApplicationNew/WebApplicationNew.csproj
+++ b/WebApplicationNew/WebApplicationNew.csproj
@@ -294,6 +294,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710250459116_Migration1.cs" />
+    <Compile Include="Migrations\201710250459116_Migration1.Designer.cs">
+      <DependentUpon>201710250459116_Migration1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -311,10 +316,6 @@
     <Compile Include="Table\Hometown.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\aspnet-WebApplicationNew-20171017110444.mdf" />
-    <Content Include="App_Data\aspnet-WebApplicationNew-20171017110444_log.ldf">
-      <DependentUpon>aspnet-WebApplicationNew-20171017110444.mdf</DependentUpon>
-    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <Content Include="Content\bootstrap.css" />
@@ -415,7 +416,6 @@
     </Content>
     <Content Include="Views\ManageUser\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
@@ -428,6 +428,14 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201710250459116_Migration1.resx">
+      <DependentUpon>201710250459116_Migration1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
